Estilizando parte lateral esquerda da pagina

--- a/style.css
+++ b/style.css
@@ -51,5 +51,79 @@ body {
     linear-gradient(30deg, rgba(76, 79, 173, 0.6173675716587805) 22%, rgba(237, 106, 134, 0.5) 169%),
     linear-gradient(48deg, rgba(31, 85, 147, 0.7323890641868473) 64%, rgba(247, 126, 132, 0.5) 43%);
   background-blend-mode: overlay, multiply, color, normal;
+  background-blend-mode: overlay, multiply, color, normal;
 }
 
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.task-manager{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1200px;
+  height: 90vh;
+  max-height: 900px;
+  background: #FFFFFF;
+  border-radius: 4px;
+  box-shadow: 0 0.3px 2.2px rgba(0, 0, 0, 0.011), 0 0.7px 5.3px rgba(0, 0, 0, 0.016),
+  0 1.3px 10px rgba(0, 0, 0, 0.02), 0 2.2px 17.9px rgba(0, 0, 0, 0.024),
+  0 4.2px 33.4px rgba(0, 0, 0, 0.029), 0 10px 80px rgba(0, 0, 0, 0.04);
+  overflow: hidden;
+}
+
+.left-bar {
+  background-color: var(--bg-color);
+  width: 230px;
+  border-right: 1px solid #E3E7F7;
+  position: relative;
+}
+
+.left-content {
+  padding: 40px;
+}
+
+.item{
+  color: var(--main-color);
+  margin-bottom: 14px;
+  font-weight: 500;
+}
+
+.item img{
+  width: 14px;
+  height: 14px;
+  color: currentColor;
+  margin-right: 10px;
+}
+
+.category-list {
+  margin-top: 50px;
+}
+
+.category-list .item{
+  color: var(--secondary-color);
+}
+
+.actions {
+  padding: 12px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.circle {
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  background-color: #FE4D46;
+  box-shadow: 14px 0 0 0 #FDC023, 28px 0 0 0 #7DD21F;
+}
+
+.circle-2 {
+  border-radius: 50%;
+  width: 4px;
+  height: 4px;
+  background-color: #D5D7E3;
+  box-shadow: -6px 0 0 0 #D5D7E3, 6px 0 0 0 #D5D7E3;
+}
