Estilização das tag input checkbox - finalizado segunda etapa

--- a/style.css
+++ b/style.css
@@ -29,16 +29,16 @@
 }
 
 body {
-    margin: 0;
-    justify-content: center;
-    flex-direction: column;
-    overflow: auto;
-    width: 100%;
-    height: 100vh;
-    padding: 20px;
-    font-family: "DM Sans", sans-serif;
-    font-size: 12px;
-    background-image: linear-gradient(
+  margin: 0;
+  justify-content: center;
+  flex-direction: column;
+  overflow: auto;
+  width: 100%;
+  height: 100vh;
+  padding: 20px;
+  font-family: 'DM Sans', sans-serif;
+  font-size: 12px;
+  background-image: linear-gradient(
       21deg,
       rgba(64, 83, 206, 0.3697003234675773) 68%,
       rgba(255, 206, 196, 0.5) 163%
@@ -51,7 +51,6 @@ body {
     linear-gradient(30deg, rgba(76, 79, 173, 0.6173675716587805) 22%, rgba(237, 106, 134, 0.5) 169%),
     linear-gradient(48deg, rgba(31, 85, 147, 0.7323890641868473) 64%, rgba(247, 126, 132, 0.5) 43%);
   background-blend-mode: overlay, multiply, color, normal;
-  background-blend-mode: overlay, multiply, color, normal;
 }
 
 ul {
@@ -59,74 +58,70 @@ ul {
   padding: 0;
 }
 
-.task-manager{
+.task-manager {
   display: flex;
   justify-content: space-between;
   width: 100%;
   max-width: 1200px;
   height: 90vh;
   max-height: 900px;
-  background: #FFFFFF;
+  background: #fff;
   border-radius: 4px;
   box-shadow: 0 0.3px 2.2px rgba(0, 0, 0, 0.011), 0 0.7px 5.3px rgba(0, 0, 0, 0.016),
-  0 1.3px 10px rgba(0, 0, 0, 0.02), 0 2.2px 17.9px rgba(0, 0, 0, 0.024),
-  0 4.2px 33.4px rgba(0, 0, 0, 0.029), 0 10px 80px rgba(0, 0, 0, 0.04);
+    0 1.3px 10px rgba(0, 0, 0, 0.02), 0 2.2px 17.9px rgba(0, 0, 0, 0.024),
+    0 4.2px 33.4px rgba(0, 0, 0, 0.029), 0 10px 80px rgba(0, 0, 0, 0.04);
   overflow: hidden;
 }
 
 .left-bar {
   background-color: var(--bg-color);
   width: 230px;
-  border-right: 1px solid #E3E7F7;
+  border-right: 1px solid #e3e7f7;
   position: relative;
 }
 
 .left-content {
   padding: 40px;
 }
-
-.item{
+.item {
   color: var(--main-color);
   margin-bottom: 14px;
   font-weight: 500;
 }
-
-.item img{
+.item img {
   width: 14px;
   height: 14px;
-  color: currentColor;
+  color: currentcolor;
   margin-right: 10px;
 }
 
 .category-list {
   margin-top: 50px;
 }
-
-.category-list .item{
+.category-list .item {
   color: var(--secondary-color);
 }
-
 .actions {
   padding: 12px;
   display: flex;
   justify-content: space-between;
 }
-
 .circle {
   border-radius: 50%;
   width: 10px;
   height: 10px;
-  background-color: #FE4D46;
-  box-shadow: 14px 0 0 0 #FDC023, 28px 0 0 0 #7DD21F;
+  background-color: #fe4d46;
+  box-shadow: 14px 0 0 0 #fbc023, 28px 0 0 0 #7dd21f;
 }
-
 .circle-2 {
   border-radius: 50%;
   width: 4px;
   height: 4px;
-  background-color: #D5D7E3;
-  box-shadow: -6px 0 0 0 #D5D7E3, 6px 0 0 0 #D5D7E3;
+  background-color: #d5d7e3;
+  box-shadow: -6px 0 0 0 #d5d7e3, 6px 0 0 0 #d5d7e3;
 }
+
+/*  */
 
 .page-content {
   display: flex;
@@ -145,7 +140,7 @@ ul {
   display: flex;
   justify-content: space-evenly;
   width: 100%;
-  border-bottom: 1px solid #DDDDDD;
+  border-bottom: 1px solid #ddd;
   padding: 20px 0;
 }
 
@@ -156,7 +151,7 @@ ul {
 .category {
   font-weight: 500;
   color: var(--secondary-color);
-  border-bottom: 1px solid #DDDDDD;
+  border-bottom: 1px solid #ddd;
   transition: 0.4s ease-in;
   padding: 20px 30px;
   cursor: pointer;
@@ -168,4 +163,89 @@ ul {
 #opt-4:checked + label {
   color: var(--checkbox-color);
   border-bottom: 2px solid var(--checkbox-color);
+}
+
+/*  */
+
+.task-item {
+  display: none;
+}
+.tasks-wrapper {
+  padding: 30px 0;
+  flex: 1;
+  overflow-y: auto;
+  height: 100%;
+  padding-right: 8px;
+}
+
+.tasks {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  margin-bottom: 16px;
+  padding-left: 30px;
+  color: var(--task-color);
+  font-size: 13px;
+  font-weight: 500;
+}
+.tasks:hover {
+  transform: translatex(2px);
+}
+.tasks label {
+  cursor: pointer;
+}
+label .label-text {
+  position: relative;
+}
+label .label-text:before {
+  content: '';
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  border: 1px solid #ddd;
+  border-radius: 2px;
+  left: -24px;
+  transition: 0.2s ease;
+}
+
+.task-item:checked + label .label-text:before {
+  background-color: var(--checkbox-color);
+  border: none;
+  background-image: url('svg/check.svg');
+  background-repeat: no-repeat;
+  background-size: 10px;
+  background-position: center;
+  border: 1px solid var(--checkbox-color);
+}
+
+.tag {
+  font-size: 10px;
+  padding: 4px 8px;
+  border-radius: 20px;
+}
+
+.tag.approved {
+  background-color: var(--tag-color-one);
+  color: var(--tag-color-text-one);
+}
+
+.tag.progress {
+  background-color: var(--tag-color-two);
+  color: var(--tag-color-text-two);
+}
+
+.tag.review{
+  background-color: var(--tag-color-three);
+  color: var(--tag-color-text-three);
+}
+
+.tag.waiting{
+  background-color: var(--tag-color-four);
+  color: var(--tag-color-text-four);
+}
+
+.upcoming{
+  border-bottom: 1px solid #DDDDDD;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
 }
